CORRECCIONES DE ESTILOS

--- a/detalles/thumb_62369_default_small.html
+++ b/detalles/thumb_62369_default_small.html
@@ -15,7 +15,7 @@
 <body>
     <div class="nav-black">40% OFF en vinos seleccionados. </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-violeta">
-        <img style="width: 40px;" src="img/ico.png" alt=""><a class="navbar-brand" href="#">Vinoteca</a>
+        <a class="navbar-brand" href="../index.html"><img style="width: 40px;" src="../img/ico.png" alt="">Vinoteca</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,11 +35,11 @@
 
     <section class="container">
         <div class="row my-5  justify-content-center align-items-end">
-            <div class="col-3">
+            <div class="col-12 col-md-3">
                 <img class="card-img-top" src="../img/thumb_62369_default_small.jpeg" alt="Card image cap">
             </div>
-            <div class="col-6">
-                <div class="card" style="width: 18rem;">
+            <div class="col-12 col-md-6">
+                <div class="card m-auto m-md-0" style="width: 18rem;">
                     <div class="card-body">
                         <p class="card-text">Benjamín Nieto Malbec</p>
                         <h5 class="card-title">$ $ 1.375 00 c/u.</h5>
