--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="nav-black">40% OFF en vinos seleccionados. </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-violeta">
-        <img style="width: 40px;" src="img/ico.png" alt=""><a class="navbar-brand" href="#">Vinoteca</a>
+        <a class="navbar-brand" href="#"><img style="width: 40px;" src="img/ico.png" alt="">Vinoteca</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
